<resources>
    <string name="app_name">Latihan2</string>
    <string name="muhammad_fajar">Muhammad Fajar</string>
    <string name="nama">Nama</string>
    <string name="kembali">KEMBALI</string>
    <string name="next">NEXT</string>
    <string name="sekolah">Sekolah</string>
    <string name="alamat">Alamat</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
</resources>